--- a/index.html
+++ b/index.html
@@ -7,24 +7,32 @@
   <title>Portfolio</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/media.css">
+  <link rel="stylesheet" href="./fonts/MaisonNeue-Bold.ttf">
 </head>
 
 <body>
   <div class="wrapper">
-    <header class="header">
-      <img class="logo" src="./images/logo.jpg" alt="logo">
+     <header class="header">
+      <div class="logo_1">
+        <img class="logo" src="./images/logo.jpg" alt="logo">
+        <button class="menu_btn">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+      </div>
       <nav class="nav">
-        <div class="helper">
+        <div class="helper helper_1 ">
           <a class="nav__link" href="#">Shop</a>
           <a class="nav__link" href="#">About us</a>
           <a class="nav__link" href="#">Our team</a>
           <a class="nav__link" href="#">Buyer's guides</a>
           <a class="nav__link" href="#">Categories</a>
         </div>
-        <div class="helper">
-          <button class="nav__button nav__button1">Buy template</button>
-          <button class="nav__button nav__button2"><img class="nav__button-cart" src="./images/корзина.svg">Cart<span
-              class="nav__button-count">0 </span></button>
+        <div class="helper helper_2">
+          <a class="nav__button nav__button1">Buy template</a>
+          <a class="nav__button nav__button2"><img class="nav__button-cart" src="./images/корзина.svg">Cart<span
+              class="nav__button-count">0 </span></a>
 
         </div>
       </nav>
@@ -46,7 +54,7 @@
           <p class="about__text">We are an outdoor gear company focused on Lorem ipsum dolor sit amet, consectetur
             adipiscing elit. Nullam scelerisque aliquam odio
             et faucibus. Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et.</p>
-          <a href="#" class="about__link">Read more &#10142;</a>
+          <a href="!#" class="about__link">Read more &#10142;</a>
 
           <img class="about__snake" src="./images/Combined-Shape.svg" alt="">
           <img class="about__snake2" src="./images/Combined-Shape.svg" alt="">
@@ -112,47 +120,48 @@
         </div>
         <div class="all-category"><a class="all-category" href="#">Show all categories&#10142;</a></div>
       </section>
-      <section class="a">
-        <div class="first__aid-nav">
-          <div>
-            <img class="first__aid-nav-cart" src="./images/cart.svg" alt="">
-            <a class="first__aid-link" href="#">First Aid Kit</a>
-            <a class="first__aid-link" href="#">Banger Bottle</a>
-          </div>
-          <div>
-            <img class="first__aid-nav-cart" src="./images/foto.svg" alt="">
-            <a class="first__aid-link" href="#">Brian Schultz</a>
-          </div>
-          <div>
-            <img class="first__aid-nav-cart" src="./images/man.svg" alt="">
-            <a class="first__aid-link" href="#">Leah Stoff</a>
-          </div>
-          <div>
-            <img class="first__aid-nav-cart" src="./images/telega.svg" alt="">
-            <a class="first__aid-link" href="#">Catalina, California</a>
-          </div>
+
+    <section class="a">
+      <div class="first__aid-nav">
+        <div>
+          <img class="first__aid-nav-cart" src="./images/cart.svg" alt="">
+          <a class="first__aid-link" href="#">First Aid Kit</a>
+          <a class="first__aid-link" href="#">Banger Bottle</a>
         </div>
-        <div class="first__aid">
-          <img class="first__aid-img" src="./images/more.jpg" alt="First_Aid">
-
+        <div>
+          <img class="first__aid-nav-cart" src="./images/foto.svg" alt="">
+          <a class="first__aid-link" href="#">Brian Schultz</a>
         </div>
-      </section>
-      <section class="shop">
+        <div>
+          <img class="first__aid-nav-cart" src="./images/man.svg" alt="">
+          <a class="first__aid-link" href="#">Leah Stoff</a>
+        </div>
+        <div>
+          <img class="first__aid-nav-cart" src="./images/telega.svg" alt="">
+          <a class="first__aid-link" href="#">Catalina, California</a>
+        </div>
+      </div>
+      <div class="first__aid">
+        <img class="first__aid-img" src="./images/more.jpg" alt="First_Aid">
 
-        <h3 class=" shop__subtitle">Shop</h3>
-        <h2 class="shop__title">Check out our products.</h2>
-        <p class=" shop__text">Morbi neque ex, condimentum dapibus congue et,
-          vulputate ut<br> ligula. Vestibulum sit amet urna turpis. Mauris euismod elit
-          et nisi <br>ultrices, ut faucibus orci tincidunt.
-        </p>
-        <img class="shop__img" src="./images/shop.svg" alt="">
-        <button class="shop__btn ">Visit shop</button>
+      </div>
+    </section>
+    <section class="shop">
 
-      </section>
+      <h3 class=" shop__subtitle">Shop</h3>
+      <h2 class="shop__title">Check out our products.</h2>
+      <p class=" shop__text">Morbi neque ex, condimentum dapibus congue et,
+        vulputate ut<br> ligula. Vestibulum sit amet urna turpis. Mauris euismod elit
+        et nisi <br>ultrices, ut faucibus orci tincidunt.
+      </p>
+      <img class="shop__img" src="./images/shop.svg" alt="">
+      <div class="b"><button class="shop__btn ">Visit shop</button>
+      </div>
+    </section>
 
     </main>
     <div>
-      
+
     </div>
   </div>
 
